# ros-package-test

./: README.md
config/: load_fetch.sh  load_gazebo_voxbloxplusplus.sh  load_gsm.sh  load_rqt.sh  load_topic.sh  load_topic_trans.sh  srobot0.urdf
src/gsm_topic_sync/: CMakeLists.txt
src/gsm_topic_sync/launch/: self_launch.launch  tf_pub.launch
src/gsm_topic_sync/src/: gsm_topic_sync.cpp
src/topic_pub/: CMakeLists.txt  package.xml
src/topic_pub/src/: talker.cpp
src/topic_translator/: CMakeLists.txt  package.xml
src/topic_translator/src/: topic_translator.cpp  trans_camera_depth_image.cpp  trans_camera_depth_info.cpp  trans_camera_rgb_info.cpp  trans_camera_tf.cpp
src/trans_camera_depth_image/: CMakeLists.txt  package.xml
src/trans_camera_depth_info/: CMakeLists.txt  package.xml
src/trans_camera_rgb_image/: CMakeLists.txt  package.xml
src/trans_camera_rgb_image/src/: trans_camera_rgb_image.cpp
src/trans_camera_rgb_info/: CMakeLists.txt  package.xml
src/trans_camera_rgb_info/src/: trans_camera_rgb_info.cpp
src/trans_camera_tf/: CMakeLists.txt  package.xml
src/trans_camera_tf/src/: trans_camera_tf.cpp
